--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+body {
+  background-color: #f5f5f5;
+  height: 100%;
+}
 #root {
-  max-width: 1280px;
+  width: 80vw;
+  height: 90vh;
+
   margin: 0 auto;
-  padding: 2rem;
+  
   text-align: center;
+  display: flex;
+  align-items: flex-start;
+ justify-content: flex-start;
 }
 
 .logo {
@@ -39,4 +48,14 @@
 
 .read-the-docs {
   color: #888;
+}
+#container{
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
