--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,23 @@ button {
 button:hover {
   border-color: #646cff;
 }
+
+#play_again {
+  background-color: rgb(254, 254, 133);
+  border: 4px solid black;
+}
+
+#play_again:hover {
+  background-color: rgb(98, 239, 46);
+}
+/*
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+*/
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
