--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,8 @@ body {
   border-radius: 20px;
   border: 1px solid black;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
 
   display: flex;
   align-items: center;
@@ -81,12 +82,16 @@ body {
 
 }
 #gameplayhistory{
+  font-size: 10px;
+  background-color: black;
+  color: white;
   border: 1px solid black;
   list-style:decimal;
-  height: 35vh;
-  min-width: 60vh;
+  height: 13vh;
+  min-width: 60vw;
   text-align: left;
- 
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 #playerselect{
  
@@ -133,4 +138,8 @@ body {
    
   width: 500px;
   height: 400px;
+}
+
+#winner{
+  color: green;
 }
