--- a/src/App.css
+++ b/src/App.css
@@ -55,17 +55,55 @@ body {
 .read-the-docs {
   color: #888;
 }
-#container{
-  border-radius: 20px;
-  border: 1px solid black;
-  width: 100%;
-  height: 100%;
 
+#container {
+ 
+  background-image: url(https://img.freepik.com/premium-photo/retro-lines-grid-space-abstract-background-elegant-luxury-80s-90s-style-3d-illustration_510351-3019.jpg);
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
+  box-shadow: inset 0 0 100px rgba(255, 255, 255, 0.6);
+  filter: 
+  /* Add a slight blur to simulate the low resolution of older TVs */
+  blur(0.5px) 
+  /* Add some horizontal and vertical displacement to simulate a slightly warped screen */
+  drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4)) ;
+
+ 
+  border:solid 5vmin #5d5b5b;
+  border-bottom-color:#565454;
+  border-left-color:#787676;
+  border-radius:2px;
+  border-right-color:#959494;
+  border-top-color:#686565;
+  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(246, 246, 246, 0.25);
+  box-sizing:border-box;
+ 
+
+  height:100%;
+  width: 100%;
+ 
+  
+  text-align:center;
+  &:before {
+    border-radius:2px;
+    bottom:-2vmin;
+    
+  
+    left:-2vmin;
+    position:absolute;
+    right:-2vmin;
+    top:-2vmin;
+  }
+ 
 }
+#container{
+  box-shadow: inset 0 0 10px rgba(237, 238, 240, 0.6);
+
+}
+
 #choisedive{
   display: flex;
   flex-direction: row;
@@ -92,7 +130,7 @@ body {
  
 
   border-radius: 10px;
-  background-image: url(https://img.freepik.com/premium-photo/retro-lines-grid-space-abstract-background-elegant-luxury-80s-90s-style-3d-illustration_510351-3019.jpg);
+  
   background-size: cover;
  
   width: 60vw;
@@ -101,7 +139,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 -20px -30px rgba(0, 0, 0, 0.25);
  
 }
 #btncontainer{
@@ -133,4 +171,99 @@ body {
    
   width: 500px;
   height: 400px;
+}
+#player1{
+  border: none;
+  border-bottom: 5px solid white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-decoration-color: white;
+ height: 50px;
+ width: 200px;
+ font-size: 25px;
+ font-family: 'Press Start 2P', cursive;
+}
+#player2{
+  border: none;
+  border-bottom: 5px solid white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-decoration-color: white;
+ height: 50px;
+ width: 200px;
+ font-size: 25px;
+ font-family: 'Press Start 2P', cursive;
+}
+
+
+
+#nameformdiv{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+#player1container{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  caret-color: #f5f5f5;
+  
+
+}
+#start_game{
+  font-size: 16px;
+  border-radius: 0;
+  width: 150px;
+  height: 50px;
+  background-image: linear-gradient(to bottom, rgb(229, 91, 23) , yellow);
+  color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+
+}
+#player1div{
+gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+#player2div{
+  gap:10px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#playercontainers{
+  margin-top: 100px;
+  margin-bottom: 100px;
+  
+  display: flex;
+  gap: 40px;
+}
+#gameplay{
+  border: 1px solid white;
+  height: 400px;
+  width: 1200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+#gameplayavatars{
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 500px;
+}
+.audiobtn{
+  border:none;
+  background: none;
+  position: absolute;
+  top: 80px;
+  right: 100px;
 }
