--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ body {
 }
 
 #container {
+  
  
   background-image: url(https://img.freepik.com/premium-photo/retro-lines-grid-space-abstract-background-elegant-luxury-80s-90s-style-3d-illustration_510351-3019.jpg);
   background-size: cover;
@@ -108,6 +109,7 @@ body {
 }
 #container{
   box-shadow: inset 0 0 10px rgba(237, 238, 240, 0.6);
+  flex-shrink: 0;
 
 }
 
@@ -126,16 +128,18 @@ body {
 
 }
 #gameplayhistory{
+  margin: 0;
   font-size: 10px;
   background-color: black;
   color: white;
   border: 1px solid black;
   list-style:decimal;
   height: 13vh;
-  min-width: 60vw;
+  min-width: 40vw;
   text-align: left;
   overflow-y: auto;
   scroll-behavior: smooth;
+  margin-bottom: 20px;
 }
 #playerselect{
  
@@ -256,13 +260,27 @@ gap: 10px;
   display: flex;
   gap: 40px;
 }
+
 #gameplay{
+  background-image: url(https://i.imgur.com/mDY92YL.gif);
+  background-size: cover;
   border: 1px solid white;
-  height: 400px;
-  width: 1200px;
+  height: 300px;
+  width: 800px;
   display: flex;
   align-items: center;
   flex-direction: column;
+  flex-shrink: 0;
+}
+#chardiv{
+
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 50px;
+  padding-bottom: 25px;
 }
 #gameplayavatars{
 
@@ -281,4 +299,28 @@ gap: 10px;
 
 #winner{
   color: green;
+  
+}
+.first-btns{
+  height: 40px;
+  background-color: rgb(251, 70, 38);
+  border-radius: 50%;
+  padding: 10px;
+
+}
+.second-btns{
+  height: 40px;
+  background-color: #153bd0;
+  border-radius: 50%;
+  padding: 10px;
+
+}
+#rock{
+  
+  border: none;
+  
+}
+#buttoncontainers{
+
+  height: 120px;
 }
